# github_crawler

./: README.md  input_data.json  parser.py  pyproject.toml  tests.py
src/: run.py
src/parser/: models.py  parser.py  utils.py
src/tests/: test_parser.py  test_utils.py
