[tool.poetry]
name = "github-parser"
version = "0.1.0"
description = ""
authors = ["romanboisiuk"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.27.0"
loguru = "^0.7.2"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.2"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
asynctest = "^0.13.0"
coverage = "^7.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
