[tool.poetry]
name = "github-parser"
version = "0.1.0"
description = ""
authors = ["romanboisiuk"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
loguru = "^0.7.2"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.2"
coverage = "^7.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
